adds background image to main, modifies functionality

--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mae's Cakes</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="app.js" defer></script>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Mae's Cakes</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,500;1,400&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
+	</head>
+	<body>
+		<nav>
+			<div class="logo">
+				<h4>Mae's Cakes</h4>
+			</div>
+			<ul class="nav-links">
+				<li><a href="#" class="link">About</a></li>
+				<li><a href="#" class="link">Cakes</a></li>
+				<li><a href="#" class="link">Flavors</a></li>
+				<li><a href="#" class="link">Order</a></li>
+			</ul>
+			<div class="burger" data-burger>
+				<div class="bar1" data-bar1></div>
+				<div class="bar2" data-bar2></div>
+				<div class="bar3" data-bar3></div>
+			</div>
+		</nav><main>
+            <section class="about">
+                <div class="para-div">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque maxime minus, ad cum dolorum illo voluptas qui et velit non eius adipisci pariatur culpa blanditiis iusto magni nostrum fuga!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque maxime minus, ad cum dolorum illo voluptas qui et velit non eius adipisci pariatur culpa blanditiis iusto magni nostrum fuga!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque maxime minus, ad cum dolorum illo voluptas qui et velit non eius adipisci pariatur culpa blanditiis iusto magni nostrum fuga!</p>
+                </div>
+            </section>
+        </main>
+		<script src="app.js"></script>
+	</body>
 </html>
