lays out and styles about section of page

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 		</nav><main>
             <section class="about">
                 <div class="para-div">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque maxime minus, ad cum dolorum illo voluptas qui et velit non eius adipisci pariatur culpa blanditiis iusto magni nostrum fuga!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque maxime minus, ad cum dolorum illo voluptas qui et velit non eius adipisci pariatur culpa blanditiis iusto magni nostrum fuga!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque maxime minus, ad cum dolorum illo voluptas qui et velit non eius adipisci pariatur culpa blanditiis iusto magni nostrum fuga!</p>
+                <p>Baking has always been a hobby of mine, but it quickly became an experession of love to my friends and family.</p>
+				<p>When someone orders a custom dessert for a loved one, I know that it is coming from their heart.</p>
+				<p>That is why every product is made from scratch and with great care using only the highest quality ingredients.</p>
                 </div>
             </section>
         </main>
