adds cakes section to site, begins to style cake section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
 				<p>That is why every product is made from scratch and with great care using only the highest quality ingredients.</p>
                 </div>
             </section>
+			<section class="cakes">
+				<div class="cakes-img">
+					<!-- Photo by Quang Nguyen Vinh: https://www.pexels.com/photo/photo-of-chocolate-cake-2144200/ -->
+					<img src="images/quang-nguyen-vinh-2144200.jpg" alt="An image of a cake.">
+				</div>
+			</section>
         </main>
 		<script src="app.js"></script>
 	</body>
