modifies/styles cakes section of page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 					<!-- Photo by Quang Nguyen Vinh: https://www.pexels.com/photo/photo-of-chocolate-cake-2144200/ -->
 					<img src="images/quang-nguyen-vinh-2144200.jpg" alt="An image of a cake.">
 				</div>
+				<div class="cakes-para">
+					<h2>Cakes For All Occasions</h2>
+					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam expedita non error doloremque eaque quas nobis sed cum in fugit ipsum, ad quia repellendus rerum labore inventore consequuntur laudantium temporibus!
+					</p>
+				</div>
 			</section>
         </main>
 		<script src="app.js"></script>
